# chatGPT_interface

./: README.md  chatGPT.py  main.py  pyproject.toml
static/: script.js
templates/: item.html
