[tool.poetry]
name = "chatGPT_interface"
version = "0.1.0"
description = ""
authors = ["Kartman570 <kotelnikovilya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
