[tool.poetry]
name = "chatGPT_interface"
version = "0.1.0"
description = ""
authors = ["Kartman570 <kotelnikovilya@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
